frostwire (6.9.4) stable; urgency=high
 * Torrentz2 search fixed
 * SoundCloud search fixed

 -- FrostWire Team <contact@frostwire.com>  Fri, 04 Jun 2021 21:54:00 -0600

frostwire (6.9.3) stable; urgency=high
 * Telluride Cloud Video Downloader build 15
 * jlibtorrent-1.2.13.0 update
 * Telluride searches are much faster, telluride runs as an RPC server in background
 * openssl 1.1.1j upgrade
 * lt:fix incoming TCP connections when using tracker-only proxy
 * lt:fix issue with paths starting with ./
 * lt:fix integer overflow when setting a high DHT upload rate limit
 * lt:improve Path MTU discovery logic in uTP
 * lt:fix overflow issue when rlimit_nofile is set to infinity
 * lt:Fix cxxflags and linkflags injection via environment variables

 -- FrostWire Team <contact@frostwire.com>  Tue, 6 Apr 2021 17:50:00 -0600

frostwire (6.9.2) stable; urgency=high
 * Telluride Cloud Video Downloader build 10
 * jlibtorrent-1.2.12.0 rebuild to fix linux compatibility issues

 -- FrostWire Team <contact@frostwire.com>  Fri, 12 Feb 2021 14:18:00 -0600

frostwire (6.9.1) stable; urgency=high
 * jlibtorrent-1.2.12.0 update
 * Detects MozillaVPN
 * Soundcloud search fixed
 * lt:fix loading of DHT node ID from previous session on startup
 * lt:use getrandom(), when available, and fall back to /dev/urandom
 * lt:fix uTP issue acking FIN packets
 * lt:validate HTTPS certificates by default (trackers and web seeds)
 * lt:load SSL certificates from windows system certificate store, to authenticate trackers
 * lt:introduce mitigation for Server Side Request Forgery in tracker and web seed URLs
 * lt:fix error handling for pool allocation failure
 * Windows build reverts to jdk-14

 -- FrostWire Team <contact@frostwire.com>  Thu, 14 Jan 2021 18:47:00 -0600

frostwire (6.8.10) stable; urgency=high
 * jlibtorrent-1.2.11.0 update
 * jaudiotagger 2.2.5 to 2.2.6 update
 * Telluride Cloud Video Downloader build 8
 * lt: upgraded to openssl 1.1.1l